Rename job and fix dependency formatting

--- a/CICD Pipeline/BuildPipeline.yml
+++ b/CICD Pipeline/BuildPipeline.yml
@@ -39,8 +39,8 @@ jobs:
         command: 'build'
         projects: 'Source_code/MathOperationApp.sln'
 
-- job: 'Build Docker Image'
-  dependsOn: MathCalAPP
+- job: 'Build_Docker_Image'
+  dependsOn: 'MathCalAPP'
   condition: succeeded()
   steps:
     - task: DockerInstaller@0
