Update Build_VM.yaml for Azure Pipelines

--- a/Build_VM.yaml
+++ b/Build_VM.yaml
@@ -24,7 +24,7 @@ steps:
 
       echo "Creating Linux VM..."
       az vm create \
-        --resource-group $DevopsLearning-rg \
+        --resource-group $RG_NAME \
         --name $VM_NAME \
         --image Ubuntu2204 \
         --admin-username $ADMIN_USER \
